# PythonSensei

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt  start.py
tools/: ProgramLauncher.py  ProgramViewer.py  PythonSensei.py  create_files.py  importer.py  misc.py
tools/days/day_001/: main.py
tools/days/day_002/: main.py
tools/days/day_003/: main.py
tools/days/day_004/: main.py
tools/days/day_005/: main.py
tools/days/day_006/: main.py
tools/days/day_007/: main.py
tools/days/day_008/: main.py
tools/days/day_009/: main.py
tools/days/day_010/: main.py
tools/days/day_011/: main.py
tools/days/day_012/: main.py
tools/days/day_013/: main.py
tools/days/day_014/: main.py
tools/days/day_015/: main.py
tools/days/day_016/: main.py
tools/days/day_017/: main.py
tools/days/day_018/: main.py
tools/days/day_019/: main.py
tools/days/day_020/: main.py
tools/days/day_021/: main.py
tools/days/day_022/: main.py
tools/days/day_023/: main.py
tools/days/day_024/: main.py
tools/days/day_025/: main.py
tools/days/day_026/: main.py
tools/days/day_027/: main.py
tools/days/day_028/: main.py
tools/days/day_029/: main.py
tools/days/day_030/: main.py
tools/days/day_031/: main.py
tools/days/day_032/: main.py
tools/days/day_033/: main.py
tools/days/day_034/: main.py
tools/days/day_035/: main.py
tools/days/day_036/: main.py
tools/days/day_037/: main.py
tools/days/day_038/: main.py
tools/days/day_039/: main.py
tools/days/day_040/: main.py
tools/days/day_041/: main.py
tools/days/day_042/: main.py
tools/days/day_043/: main.py
tools/days/day_044/: main.py
tools/days/day_045/: main.py
tools/days/day_046/: main.py
tools/days/day_047/: main.py
tools/days/day_048/: main.py
tools/days/day_049/: main.py
tools/days/day_050/: main.py
tools/days/day_051/: main.py
tools/days/day_052/: main.py
tools/days/day_053/: main.py
tools/days/day_054/: main.py
tools/days/day_055/: main.py
tools/days/day_056/: main.py
tools/days/day_057/: main.py
tools/days/day_058/: main.py
tools/days/day_059/: main.py
tools/days/day_060/: main.py
tools/days/day_061/: main.py
tools/days/day_062/: main.py
tools/days/day_063/: main.py
tools/days/day_064/: main.py
tools/days/day_065/: main.py
tools/days/day_066/: main.py
tools/days/day_067/: main.py
tools/days/day_068/: main.py
tools/days/day_069/: main.py
tools/days/day_070/: main.py
tools/days/day_071/: main.py
tools/days/day_072/: main.py
tools/days/day_073/: main.py
tools/days/day_074/: main.py
tools/days/day_075/: main.py
tools/days/day_076/: main.py
tools/days/day_077/: main.py
tools/days/day_078/: main.py
tools/days/day_079/: main.py
tools/days/day_080/: main.py
tools/days/day_081/: main.py
tools/days/day_082/: main.py
tools/days/day_083/: main.py
(+172 files in other folders)
