[tool.poetry]
name = "pythonsensei"
version = "0.1.0"
description = "Python Sensei - 100 Days of Python"
authors = ["idabblewith <109533655+idabblewith@users.noreply.github.com>"]
license = "UNLICENSED"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorgram-py = "^1.2.0"
pandas = "^2.2.2"
pyperclip = "^1.8.2"
requests = "^2.32.3"
twilio = "^9.1.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
spotipy = "^2.24.0"
selenium = "^4.21.0"
undetected-chromedriver = "^3.5.5"
scapy = "^2.5.0"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"
flask = "^3.0.3"
flask-wtf = "^1.2.1"
wtforms = "^3.1.2"
bootstrap-flask = "^2.4.0"
sqlalchemy = "^2.0.30"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-gravatar = "^0.5.0"
psycopg-binary = "^3.1.19"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
soundfile = "^0.12.1"
yfinance = "^0.2.41"
sounddevice = "^0.5.0"
gunicorn = "^23.0.0"
flask-ckeditor = {extras = ["all"], version = "^1.0.0"}
pyttsx3 = "^2.98"
pypdf2 = "^3.0.1"
pycryptodome = "^3.21.0"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
